--- a/push_swap/Makefile
+++ b/push_swap/Makefile
@@ -1,5 +1,6 @@
 SRC = checkers checkers2 ft_buildstack ft_free ft_printerror \
-	ft_utils rules rules2 rules3 main 
+	ft_utils lst_utils rules rules2 rules3 \
+	stack_utils main 
 OBJ =  ${SRC:=.o}
 NAME = push_swap.a
 INCLUDE = Libft/libft.h
