--- a/push_swap/Makefile
+++ b/push_swap/Makefile
@@ -1,6 +1,7 @@
 SRC = checkers checkers2 ft_buildstack ft_free ft_printerror \
 	ft_utils lst_utils rules rules2 rules3 \
-	stack_utils main 
+	stack_utils sorting moves calculations main \
+	calc calc2
 OBJ =  ${SRC:=.o}
 NAME = push_swap.a
 INCLUDE = Libft/libft.h
